--- a/lit/tex4ht-cpright.tex
+++ b/lit/tex4ht-cpright.tex
@@ -14,8 +14,7 @@
 % is the TeX4ht Project <http://tug.org/tex4ht>.
 % 
 % If you modify this program, changing the 
-% version identification would be appreciated.
->>>
+% version identification would be appreciated.>>>
 
 % License text + \write to log file.
 \<TeX4ht copywrite\><<<
