--- a/lit/tex4ht-c.tex
+++ b/lit/tex4ht-c.tex
@@ -244,7 +244,7 @@ of Windows 3.1,  WIN32 window in Windows 95/NT,  Unix shell, etc).
 
 
 \<tex4ht.h\><<<
-/* Compiler options (uncommented | command line) */
+/* Compiler options (uncommented | command line), as comments:
 
        Classic C (CC)             default
 #define ANSI                      ansi-c, c++
